K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-depl
  labels:
    app: commandservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: adityassankar/commandservice:latest
        

---

apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 8080
